src/axom/quest/interface/c_fortran/wrapQUEST.h

// wrapQUEST.h
// This file is generated by Shroud 0.14.0. Do not edit.
//
// Copyright (c) Lawrence Livermore National Security, LLC and other
// Axom Project Contributors. See top-level LICENSE and COPYRIGHT
// files for dates and other details.
//
// SPDX-License-Identifier: (BSD-3-Clause)

#pragma once

/**
 * \file wrapQUEST.h
 * \brief Shroud generated wrapper for quest namespace
 */
// For C users and C++ implementation

#ifdef AXOM_USE_MPI
  #include "mpi.h"
#endif
#include "wrapQUEST.h"
#ifdef __cplusplus
  #include <cstddef>
#else
  #include <stdbool.h>
  #include <stddef.h>
#endif
#include "typesQUEST.h"

// splicer begin CXX_declarations
// splicer end CXX_declarations

#ifdef __cplusplus
extern "C" {
#endif

// splicer begin C_declarations
// splicer end C_declarations

//  axom::quest::SignedDistExec
enum QUEST_SignedDistExec
{
  // splicer begin enum.SignedDistExec
  QUEST_SignedDistExec_CPU = 0,
  QUEST_SignedDistExec_OpenMP = 1,
  QUEST_SignedDistExec_GPU = 2
  // splicer end enum.SignedDistExec
};

#ifdef AXOM_USE_MPI
int QUEST_inout_init_mpi(const char *fileName, MPI_Fint comm);
#endif

#ifdef AXOM_USE_MPI
int QUEST_inout_init_mpi_bufferify(char *fileName, int SHT_fileName_len, MPI_Fint comm);
#endif

#ifndef AXOM_USE_MPI
int QUEST_inout_init_serial(const char *fileName);
#endif

#ifndef AXOM_USE_MPI
int QUEST_inout_init_serial_bufferify(char *fileName, int SHT_fileName_len);
#endif

bool QUEST_inout_initialized(void);

int QUEST_inout_set_dimension(int dim);

int QUEST_inout_set_verbose(bool verbosity);

int QUEST_inout_set_vertex_weld_threshold(double thresh);

int QUEST_inout_set_segments_per_knot_span(int segmentsPerKnotSpan);

bool QUEST_inout_evaluate_0(double x, double y);

bool QUEST_inout_evaluate_1(double x, double y, double z);

int QUEST_inout_mesh_min_bounds(double *coords);

int QUEST_inout_mesh_max_bounds(double *coords);

int QUEST_inout_mesh_center_of_mass(double *coords);

int QUEST_inout_get_dimension(void);

int QUEST_inout_finalize(void);

#ifdef AXOM_USE_MPI
int QUEST_signed_distance_init_mpi(const char *file, MPI_Fint comm);
#endif

#ifdef AXOM_USE_MPI
int QUEST_signed_distance_init_mpi_bufferify(char *file, int SHT_file_len, MPI_Fint comm);
#endif

#ifndef AXOM_USE_MPI
int QUEST_signed_distance_init_serial(const char *file);
#endif

#ifndef AXOM_USE_MPI
int QUEST_signed_distance_init_serial_bufferify(char *file, int SHT_file_len);
#endif

bool QUEST_signed_distance_initialized(void);

void QUEST_signed_distance_get_mesh_bounds(double *lo, double *hi);

void QUEST_signed_distance_set_dimension(int dim);

void QUEST_signed_distance_set_closed_surface(bool status);

void QUEST_signed_distance_set_compute_signs(bool computeSign);

void QUEST_signed_distance_set_allocator(int allocatorID);

void QUEST_signed_distance_set_verbose(bool status);

void QUEST_signed_distance_use_shared_memory(bool status);

void QUEST_signed_distance_set_shared_memory_size(size_t minSegmentSize);

void QUEST_signed_distance_set_execution_space(enum QUEST_SignedDistExec execSpace);

void QUEST_signed_distance_set_execution_space_bufferify(int execSpace);

double QUEST_signed_distance_evaluate_0(double x, double y, double z);

double QUEST_signed_distance_evaluate_1(double x,
                                        double y,
                                        double z,
                                        double *cp_x,
                                        double *cp_y,
                                        double *cp_z,
                                        double *n_x,
                                        double *n_y,
                                        double *n_z);

void QUEST_signed_distance_finalize(void);

#ifdef __cplusplus
}
#endif